<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
    <string name="privacy_policy_text" translatable="false"><![CDATA[Read our Privacy Policy. Tap “Agree & Continue” to accept the Terms of Service.]]></string>
    <string name="send_button_text">Send</string>
    <string name="from_saneeth">From\nSaneeth</string>
    <string name="welcome_to_chatapp_verify">Welcome to ChatApp</string>
    <string name="enter_sms_code">Enter sms code</string>
    <string name="edit_text_hint" translatable="false">------</string>
    <string name="done_text_button">Done</string>
    <string name="enter_your_number_login_hint">Enter your number</string>
    <string name="chatapp_splash_screen">ChatApp</string>
    <string name="chats_bottom_bar">Chats</string>
    <string name="groups_bottom_bar">Groups</string>
    <string name="profile_text_toolbar">Profile</string>
    <string name="logout_text_toolbar">Logout</string>
    <string name="enter_your_name_profile">Enter your name</string>
    <string name="profile_save_button">Save</string>
    <string name="status_text_in_profile_screen">Status</string>
    <string name="name_from_user_list">Name</string>
    <string name="status_text_user_list">Status</string>
    <string name="receive_chat_layout_text">receive</string>
    <string name="send_chat_layout_text">send</string>
    <string name="type_a_message_chat_window">Type a Message</string>
    <string name="name_chat_window_top_bar">Name</string>
    <string name="please_enter_your_group_name">Please Enter Your Group Name</string>
    <string name="save_group_name">Save</string>
    <string name="group_name_text_top_bar">Group Name</string>
    <string name="select_paticipants_text">Select Paticipants</string>
    <string name="name_in_receive_message">Name</string>
    <string name="user_profile_view">User Profile</string>
    <string name="chats_view_pager">Chats</string>
    <string name="groups_view_pager">Groups</string>
</resources>